Basic Security. ROLES added. POST, DELETE restrictions added