@@ -1,32 +1,41 @@
 package space.cheran.springsecuritydemo.rest;
 
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import space.cheran.springsecuritydemo.model.Developer;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("api/v1/developers")
 public class DeveloperRestControllerV1 {
-    private final List<Developer> DEVELOPERS = Stream.of(
-            new Developer(1L, "Ivan", "Ivanov"),
-            new Developer(2L, "Sergey", "Sergeev"),
-            new Developer(3L, "Petr",  "Petrov")
-    ).toList();
+
+private List<Developer> developers = Stream.of(
+                new Developer(1L, "Ivan", "Ivanov"),
+                new Developer(2L, "Sergey", "Sergeev"),
+                new Developer(3L, "Petr",  "Petrov")
+).collect(Collectors.toList());
 
     @GetMapping
        public List<Developer> getAll(){
-        return DEVELOPERS;
+       return developers;
     }
     @GetMapping("{id}")
     public Developer getById(@PathVariable Long id){
-        return DEVELOPERS.stream().filter(developer -> developer.getId().equals(id))
+        return developers.stream().filter(developer -> developer.getId().equals(id))
                 .findFirst()
                 .orElse(null);
+    }
+    @PostMapping
+    public Developer create(@RequestBody Developer developer){
+        this.developers.add(developer);
+        return developer;
+    }
+    @DeleteMapping("{id}")
+    public void deleteById(@PathVariable Long id){
+        this.developers.removeIf(developer -> developer.getId().equals(id));
     }
 
 }
